start stop spacing

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -271,14 +271,15 @@ input[type=range]::-webkit-slider-thumb {
 #controls {
    position: absolute;
    left: 372px;
-   top: 449px;
+   top: 450px;
 }
 #controls>button {
    width: 84px;
-   height: 28px;
-   margin-left: 2px;
+   height: 26px;
+   margin-left: 0px;
    border: none;
    background: transparent;
+   /* border:1px solid red; */
 }
 
 
